[feat] 정산페이지 수정 #160